--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Palindrome Checker</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Palindrome Checker</h1>
+        <p>
+          A palindrome is a word or a phase that reads the same backwards as
+          forwards. eg. level, refer.
+        </p>
+      </header>
+
+      <div class="inputs">
+        <input type="text" placeholder="Enter text or number" />
+        <button>Check palindrome</button>
+      </div>
+      <p class="info-txt">Yes, <span>'Borrow or rob'</span> is a palindrome!</p>
+    </div>
+  </body>
 </html>
