--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
       </div>
       <p class="info-txt">Yes, <span>'Borrow or rob'</span> is a palindrome!</p>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
